# ductile-plugins

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yml
agent_handshake/: manifest.yaml  run.py
astro_rebuild_staging/: manifest.yaml
birda/: README.md  manifest.yaml  run.py  test_run.py
birdnet_firstday/: README.md  manifest.yaml  run.py  test_run.py
blink_sync/: manifest.yaml  run.sh
changelog_microblog/: manifest.yaml  run.py  test_run.py
check_youtube/: manifest.yaml  run.py
claude_harvest/: README.md  manifest.yaml  run.py
discord_notify/: manifest.yaml  run.py  test_run.py
email_handler/: manifest.yaml  prompt.example.md  run.py
email_pipeline_classifier_a/: manifest.yaml  pyproject.toml  run.py  test_run.py
email_pipeline_fetch/: manifest.yaml  pyproject.toml  run.py  test_run.py
email_pipeline_promptarmor/: default_rules.yml  manifest.yaml  pyproject.toml  run.py  test_run.py
email_pipeline_promptguard/: manifest.yaml  pyproject.toml  run.py  test_run.py
email_pipeline_sanitise/: manifest.yaml  pyproject.toml  run.py  test_run.py
email_pipeline_sentinel/: manifest.yaml  pyproject.toml  run.py  test_run.py
email_pipeline_triage/: manifest.yaml  pyproject.toml  run.py
email_pipeline_veto/: manifest.yaml  pyproject.toml  run.py  test_run.py
email_send/: README.md  manifest.yaml  run.py
fabric/: manifest.yaml  run.py
git_commit_push/: manifest.yaml
git_repo_sync/: manifest.yaml  run.py  test_run.py
github_repo_sync/: manifest.yaml  run.py
gmail_poller/: README.md  manifest.yaml  run.py  test_run.py
health_data_summary/: README.md  manifest.yaml  run.py  run.sh
health_weekly_report/: README.md  manifest.yaml  run.py
health_weekly_report/patterns/health_exec_summary/: system.md
health_weekly_report/patterns/health_section_narrative/: system.md
hibp_radar/: README.md  manifest.yaml  run.py  test_run.py
jina-reader/: README.md  manifest.yaml  run.py  test_run.py
repo_policy/: manifest.yaml  run.py
sqlite_change/: README.md  manifest.yaml  run.py  test_run.py
youtube_playlist/: README.md  manifest.yaml  run.py  test_run.py
youtube_transcript/: manifest.yaml  run.py
